# nordic-probai-2024

./: .gitignore  pyproject.toml
[work] day2/Thomas D. Nielsen Andrés Masegosa Helge Langseth/Session-I/notebooks/: [work] CAVI-linreg.ipynb
[work] day2/Thomas D. Nielsen Andrés Masegosa Helge Langseth/Session-II/notebooks/: [work] bayesian_linear_regression.ipynb  [work] student_simple_gaussian_model_pyro.ipynb
[work] day2/Thomas D. Nielsen Andrés Masegosa Helge Langseth/Session-III/notebooks/: [work] students_VAE.ipynb
day1/Silja Renooij/: [work] DIY-LinearRegressionML.ipynb  [work] DIY-MontyHall.ipynb
day2/Thomas D. Nielsen Andrés Masegosa Helge Langseth/Session-I/notebooks/: [work] CAVI-linreg.ipynb  [work] students_simple_model.ipynb
day2/Thomas D. Nielsen Andrés Masegosa Helge Langseth/Session-II/notebooks/: [work] students_BBVI.ipynb
day3/: Probai24_diffusion.ipynb
day3/Jes Frellsen/: [work] 1-VAE.ipynb  [work] 2-Flow.ipynb
day3/probai24/notebooks/course_content/: 01_test_toy_data.ipynb
day3/probai24/src/evaluation/: visualizer.py
day3/probai24/src/models/: ddpm.py
