[tool.poetry]
name = "ProbAI"
version = "0.0.1"
description = "Environment for Nordic Probabilisitc AI summer school 2024"
authors = ["Martine Dyring Hansen <martine.d.hansen@ntnu.no>"]
readme = "README.md"
# repository = ""

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Requirements
[tool.poetry.dependencies]
python = "=3.9.6"
requests = "^2.26.0"
black = {extras = ["jupyter"], version = "^23.12.1"}
flake8 = "^6.1.0"
isort = "^5.12.0"
mypy = "^1.5.1"
tqdm = "^4.66.1"
pandas = "^2.0.3"
numpy = "^1.25.2"
torchvision = "^0.15.2"
jupyter-contrib-nbextensions = "^0.7.0"
jupyter = {extras = ["black"], version = "^1.0.0"}
ipykernel = "^6.25.1"
nbconvert = "^7.8.0"
scipy = "^1.11.2"
torch = "^2.0.1"
matplotlib = "^3.8.2"
scikit-learn = "^1.3.2"
torchmetrics = "^1.3.0"
pytest = "^7.4.4"
urllib3 = "1.26.6"
autograd = "^1.6.2"
imageio = "^2.34.0"
pyyaml = "^6.0.1"
dill = "^0.3.8"
seaborn = "^0.13.2"
shapely = "^2.0.4"
ipympl = "^0.9.4"
plotly = "^5.21.0"
kaleido = "0.2.1"
numdifftools = "^0.9.41"
opencv-python = "^4.10.0.82"
torch-geometric = "^2.5.3"
pgmpy = "^0.1.25"

[tool.black]
line-length = 90

[tool.isort]
profile = "black"
